# eagle2

./: .gitignore  README.md  eagle2.rosinstall
ackermann_cmd_mux/: CMakeLists.txt
ackermann_cmd_mux/src/: throttle_interpolator.py
eagle2/: CMakeLists.txt  package.xml
eagle2/cfg/: KITTI.yaml  joy.yaml  lidar.yaml  map.yaml  mux.yaml  navigation.yaml  vesc.yaml
eagle2/cfg/sensors/: gps.yaml
eagle2/launch/: eagle2.launch  eagle2.xml  static_tf.xml  vesc.xml
eagle2/launch/include/: gps.xml  imu.xml  lidar.xml  navigation.xml  orb_slam.xml  perception.xml  teleop.xml  vesc.xml
eagle2_perception/: 1.py  CMakeLists.txt  bounding_box_ego.py  calibrate.py  drivable_area_ros.py  eagle2_perception_nodelet.xml  package.xml  perception.cpp
eagle2_perception/cfg/: config.yaml
eagle2_perception/cmake/: FindTensorFlow.cmake
eagle2_perception/eagle2_perception/: calibrate.py  config.yaml  run.py  utils.py  utils_box3d.py  utils_yolo.py
eagle2_perception/include/: bonnet.hpp  box3d.hpp  camera_publisher.hpp  common.hpp  perception.hpp  utils.hpp
eagle2_perception/launch/: eagle2_perception.launch  eagle2_perception_nodelet.launch
eagle2_perception/src/: bonnet.cpp  box3d.cpp  camera_publisher.cpp  camera_publisher_node.cpp  camera_publisher_nodelet.cpp  perception.cpp  perception_node.cpp  perception_nodelet.cpp  utils.cpp
eagle2_perception_cpp/: CMakeLists.txt  FindTensorFlow.cmake  bonnet.cpp  build.sh  drivable_area_ros.py  occupancy_grid.py  perception.cpp  utils.cpp
eagle2_perception_cpp/cmake/: FindTensorFlow.cmake
eagle2_perception_cpp/include/: utils.hpp
eagle2_perception_python_deprecated/: CMakeLists.txt  package.xml  setup.py  video_demo.py
eagle2_perception_python_deprecated/eagle2_perception/: 1.py  run.py  trt.py
eagle2_perception_python_deprecated/launch/: node.launch
eagle2_perception_python_deprecated/scripts/: run.py
eagle2_slam/: KITTI.yaml  orb_slam2.xml
misc/: 10-eaglemk4.rules  build_map.py  c920-configure.sh  calibrate.py  compute-constraints.py  convert_to_trt.py  drive3m.py  eagle2.service  webcam-to-mjpeg.py
