<?xml version="1.0"?>
<package format="2">
  <name>eagle2</name>
  <version>0.1.0</version>
  <description>The eagle2 package</description>
  <maintainer email="rsokolkov@gmail.com">Roma Sokolkov</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>joy</depend>
  <depend>map-server</depend>
  <depend>teb-local-planner</depend>
  <depend>teb-local-planner-tutorials</depend>
  <!-- other dependencies in eagle2.rosinstall -->
</package>
