<?xml version="1.0"?>
<package format="2">
  <name>eagle2_perception</name>
  <version>0.1.0</version>
  <description>eagle2 perception</description>
  <maintainer email="rsokolkov@gmail.com">Roman Sokolkov</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>jsk_recognition_msgs</depend>
</package>
