<?xml version="1.0"?>
<package format="2">
  <name>eagle2_perception</name>
  <version>0.0.1</version>
  <description>The eagle2_perception package</description>

  <maintainer email="rsokolkov@gmail.com">Roma Sokolkov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
